--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     
        <div>
          
-        <span class="job-names"><b>Lulu's Thai Noddle Shop</b> | (816) 474-8424 </span>
+        <span class="job-names"><b>Lulu's Thai Noodle Shop</b> | (816) 474-8424 </span>
         <i class="date float">Apr 2012 - May 2017</i>
         <hr/>
         <i>Bartender, Waitstaff, Keyholder</i>
